--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "zoo-website",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://shaygali.github.io/Zoo-Website",
